--- a/src/components/food/cata.less
+++ b/src/components/food/cata.less
@@ -11,7 +11,8 @@
         font-size: 20px;
         
     }
-    .select{
-        color: red !important;
+   
+    .select :active{
+        color: red ;
     }
 }
